--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ MongoDB_URL = mongodb+srv://biku404notfound_db_user:C6dTllu1ibnepuC0@clusterstoc
 PORT = 4001
 
 FRONTEND_URL=http://localhost:5173
+PYTHON_BACKEND_URL=http://127.0.0.1:8000/api
 
 GOOGLE_CLIENT_ID=46294756080-jbvokng6ntr0vmjusifvhkui6n05n62v.apps.googleusercontent.com
 GOOGLE_CLIENT_SECERET= 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
